# serializer version: 1
# name: TestSummaryEmployeeRecords.test_action_bar[ARCHIVED]
  '''
  <div class="s-title-02__col col-12">
                              
      
  
  
      <div class="c-prevstep">
          <a aria-label="Retour à la liste" class="btn btn-ico btn-link ps-0" href="/employee_record/list">
              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium"></i>
              <span>
                  Retour
                  à la liste
              </span>
          </a>
      </div>
  
  
  
                              
      
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  Fiche salarié ASP : Lauren MATA
                  
      <span class="badge rounded-pill badge-base text-nowrap bg-emploi-lightest text-primary">
          Archivée le 29/04/2025 13:11
      </span>
  
  
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
  
                              
                              
      
  
                          </div>
  '''
# ---
# name: TestSummaryEmployeeRecords.test_action_bar[DISABLED]
  '''
  <div class="s-title-02__col col-12">
                              
      
  
  
      <div class="c-prevstep">
          <a aria-label="Retour à la liste" class="btn btn-ico btn-link ps-0" href="/employee_record/list">
              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium"></i>
              <span>
                  Retour
                  à la liste
              </span>
          </a>
      </div>
  
  
  
                              
      
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  Fiche salarié ASP : Lauren MATA
                  
      <span class="badge rounded-pill badge-base text-nowrap bg-emploi-lightest text-primary">
          Désactivée le 29/04/2025 13:11
      </span>
  
  
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
  
                              
                              
      
          <div class="c-box c-box--action">
              <div class="form-row align-items-center gx-3">
                  
                      <div class="form-group col-12 col-lg-auto">
                          <a class="btn btn-lg btn-white btn-block btn-ico" href="/employee_record/reactivate/[Pk of EmployeeRecord]">
                              <i aria-hidden="true" class="ri-reset-right-line font-weight-medium"></i>
                              <span>Réactiver</span>
                          </a>
                      </div>
                  
                  
              </div>
          </div>
      
  
                          </div>
  '''
# ---
# name: TestSummaryEmployeeRecords.test_action_bar[NEW]
  '''
  <div class="s-title-02__col col-12">
                              
      
  
  
      <div class="c-prevstep">
          <a aria-label="Retour à la liste" class="btn btn-ico btn-link ps-0" href="/employee_record/list">
              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium"></i>
              <span>
                  Retour
                  à la liste
              </span>
          </a>
      </div>
  
  
  
                              
      
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  Fiche salarié ASP : Lauren MATA
                  
      <span class="badge rounded-pill badge-base text-nowrap bg-emploi">Nouvelle à compléter</span>
  
  
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
  
                              
                              
      
          <div class="c-box c-box--action">
              <div class="form-row align-items-center gx-3">
                  
                      <div class="form-group col-12 col-lg-auto">
                          <a class="btn btn-lg btn-white btn-block btn-ico" href="/employee_record/create/[Pk of JobApplication]?from_status=NEW">
                              <i aria-hidden="true" class="ri-file-edit-line font-weight-medium"></i>
                              <span>Compléter</span>
                          </a>
                      </div>
                  
                  
              </div>
          </div>
      
  
                          </div>
  '''
# ---
# name: TestSummaryEmployeeRecords.test_action_bar[PROCESSED]
  '''
  <div class="s-title-02__col col-12">
                              
      
  
  
      <div class="c-prevstep">
          <a aria-label="Retour à la liste" class="btn btn-ico btn-link ps-0" href="/employee_record/list">
              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium"></i>
              <span>
                  Retour
                  à la liste
              </span>
          </a>
      </div>
  
  
  
                              
      
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  Fiche salarié ASP : Lauren MATA
                  
      <span class="badge rounded-pill badge-base text-nowrap bg-success">
          Intégrée par l'ASP le 29/04/2025 13:11
      </span>
  
  
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
  
                              
                              
      
          <div class="c-box c-box--action">
              <div class="form-row align-items-center gx-3">
                  
                  
                      <div class="form-group col-12 col-lg-auto">
                          <a class="btn btn-lg btn-outline-white btn-block btn-ico" href="/employee_record/disable/[Pk of EmployeeRecord]">
                              <i aria-hidden="true" class="ri-file-close-line font-weight-medium"></i>
                              <span>Désactiver</span>
                          </a>
                      </div>
                  
              </div>
          </div>
      
  
                          </div>
  '''
# ---
# name: TestSummaryEmployeeRecords.test_action_bar[READY]
  '''
  <div class="s-title-02__col col-12">
                              
      
  
  
      <div class="c-prevstep">
          <a aria-label="Retour à la liste" class="btn btn-ico btn-link ps-0" href="/employee_record/list">
              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium"></i>
              <span>
                  Retour
                  à la liste
              </span>
          </a>
      </div>
  
  
  
                              
      
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  Fiche salarié ASP : Lauren MATA
                  
      <span class="badge rounded-pill badge-base text-nowrap bg-secondary">
          Complétée le 29/04/2025 13:11
      </span>
  
  
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
  
                              
                              
      
  
                          </div>
  '''
# ---
# name: TestSummaryEmployeeRecords.test_action_bar[REJECTED]
  '''
  <div class="s-title-02__col col-12">
                              
      
  
  
      <div class="c-prevstep">
          <a aria-label="Retour à la liste" class="btn btn-ico btn-link ps-0" href="/employee_record/list">
              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium"></i>
              <span>
                  Retour
                  à la liste
              </span>
          </a>
      </div>
  
  
  
                              
      
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  Fiche salarié ASP : Lauren MATA
                  
      <span class="badge rounded-pill badge-base text-nowrap bg-danger">
          Retour en erreur le 29/04/2025 13:11
      </span>
  
  
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
  
                              
                              
      
          <div class="c-box c-box--action">
              <div class="form-row align-items-center gx-3">
                  
                      <div class="form-group col-12 col-lg-auto">
                          <a class="btn btn-lg btn-white btn-block btn-ico" href="/employee_record/create/[Pk of JobApplication]?from_status=REJECTED">
                              <i aria-hidden="true" class="ri-pencil-line font-weight-medium"></i>
                              <span>Modifier</span>
                          </a>
                      </div>
                  
                  
                      <div class="form-group col-12 col-lg-auto">
                          <a class="btn btn-lg btn-outline-white btn-block btn-ico" href="/employee_record/disable/[Pk of EmployeeRecord]">
                              <i aria-hidden="true" class="ri-file-close-line font-weight-medium"></i>
                              <span>Désactiver</span>
                          </a>
                      </div>
                  
              </div>
          </div>
      
  
                          </div>
  '''
# ---
# name: TestSummaryEmployeeRecords.test_action_bar[SENT]
  '''
  <div class="s-title-02__col col-12">
                              
      
  
  
      <div class="c-prevstep">
          <a aria-label="Retour à la liste" class="btn btn-ico btn-link ps-0" href="/employee_record/list">
              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium"></i>
              <span>
                  Retour
                  à la liste
              </span>
          </a>
      </div>
  
  
  
                              
      
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  Fiche salarié ASP : Lauren MATA
                  
      <span class="badge rounded-pill badge-base text-nowrap bg-warning">
          Envoyée à l'ASP le 29/04/2025 13:11
      </span>
  
  
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
  
                              
                              
      
  
                          </div>
  '''
# ---
